# nanosiglip

./: LICENSE  README.md  pyproject.toml
scripts/: inference_siglip_lora.py  linear_probe_siglip.py  run_siglip.py  siglip_calibration.py  train_siglip_lora.py
src/nanosiglip/: __init__.py
src/nanosiglip/siglip/: __init__.py  calibration.py  hub.py  lora.py  model.py  processing.py  text_processing.py
tests/: test_calibration.py  test_e2e_pipeline_parity.py  test_lora.py  test_siglip_parity.py  test_text_processing_parity.py
